--- a/homework1/index.html
+++ b/homework1/index.html
@@ -11,7 +11,7 @@
 	<nav>
 		<ol>
 			<a href="index.html">About</a>
-			<a href="homework1/family.html">Family</a>
+			<a href="family.html">Family</a>
 		</ol>
 	</nav>
 </header>
