--- a/homework1/family.html
+++ b/homework1/family.html
@@ -9,8 +9,9 @@
 
 <header>
 	<nav>
-		<a href="index.html">About</a>
-		<a href="family.html">Family</a>	
+		<ol>
+			<li><a href="index.html">About</a></li>
+			<li><a href="family.html">Family</a></li>
 	</nav>
 </header>
 
