--- a/homework1/family.html
+++ b/homework1/family.html
@@ -10,8 +10,11 @@
 <header>
 	<nav>
 		<ol>
-			<li><a href="index.html">About</a></li>
-			<li><a href="family.html">Family</a></li>
+			<li>
+			<a href="index.html">About</a>
+			<a href="family.html">Family</a>
+			</li>
+		</ol>
 	</nav>
 </header>
 
