--- a/homework1/family.html
+++ b/homework1/family.html
@@ -28,9 +28,10 @@
 <img src = "images/falling.jpg" alt="Boy falling in pit" />
 <img src = "images/jewel_cave.jpg" alt="Jewel Cave National Monument" />
 
-</main>
-
+<footer>
 Colleen van Lent &copy; 2020
+</footer>	
+</main>
 </body>
 </html>
 
