--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,11 +25,11 @@
     <main>
 
     <h1> The Kinda Big 4 </h1>
-    <p>Dubbed the “Big 4”, the founders of thrash metal are Metallica, Slayer, Megadeth, and Anthrax. This humble homage is dedicated to three of the four, and I’m replacing Anthrax with Pantera. Nothing against Anthrax. They’re a great band deserving much credit, but Pantera brought a new level to the genre.</p>
+    <p>Dubbed the “Big 4”, the founders of thrash metal are Metallica, Slayer, Megadeth, and Anthrax. This humble homage is dedicated to three of the four, and I’m replacing Anthrax with Pantera. Nothing against Anthrax, they’re a great band deserving much credit, but Pantera brought a new level to the genre.</p>
 
-	<p>The sounds of trash metal typically involve down-tuned guitars with complex guitar riffs. Guitar solos are very common, and often use higher-register notes. They are high speed and technical, and use advanced techniques including sweep picking, alternate picking, string skipping, and two-hand tapping. Double bass drums are frequently heard. Vocals can range from melodic, clean singing to shouted or even growled singing. </p>
+	<p>The sounds of thrash metal typically involve down-tuned guitars with complex guitar riffs. Guitar solos are very common, and often use higher-register notes. They are high speed and technical, and use advanced techniques including sweep picking, alternate picking, string skipping, and two-hand tapping. Double bass drums are frequently heard. Vocals can range from melodic, clean singing to shouted or even growled singing. </p>
 
-	<p>Another commonality between these bands is their guitarists are regarded in the metal community as some of the most innovative and influential players in guitar history. Most have two guitarists, a lead and a rhythm, but Pantera features only one. 
+	<p>Another commonality between these bands is their guitarists are regarded in the metal community as some of the most innovative and influential players in guitar history. Most have two guitarists, a lead and a rhythm, while Pantera features only one. 
 	<br><br><br><br>
 	The images below will also link you to the corresponding pages.
 	</p>
