--- a/portfolio/megadeth.html
+++ b/portfolio/megadeth.html
@@ -6,14 +6,34 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Megadeth</title>
-  </head>
-    <body>
-    <main>
-    	<nav>
-		<ol>
-			<a href="index.html">Homepage</a>
-		</ol>
-	</nav>
+    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+</head>
+<body>
+    <header>
+    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <nav>
+        <ul class="bands_nav">
+          <li class="home"><a href="index.html">Homepage</a></li>
+          <li class="met"><a href="metallica.html">Metallica</a></li>
+          <li class="slay"><a href="slayer.html">Slayer</a></li>
+          <li class="pan"><a href="pantera.html">Pantera</a></li>
+        </ul>
+    </nav>
+    </header>
+<main>
+<img src="images/megadeth concert.jpg" alt="Megadeth with concert crowd in background">
+<p>As mentioned in the Metallica page, the original guitarist was fired. That guitaris was Dave Mustaine. Clearly upset by the events that unfolded, he went on to form his own band. As legend has it Mustaine said he wanted to, “form the heaviest metal band. Heavier than Metallica.”. </p>
+
+<p>Megadeth was born from this, and became one of the Big 4. Listen to any Megadeth song, and it’s evident Mustaine’s talent on the guitar is superb. What also set them apart was their lyrical topics of death, war, politics, and religion.</p>
+
+<p>Twelve Grammy nominations later, Megadeth finally won the award in 2017. Six of their albums achieved platinum. </p>
+
+<p><br><br><br>Personal Favorite Album: Rust in Peace</p>
+<img src="images/mustaine rattlehead.jpg" alt="Dave Mustaine playing guitar with mascot Rattlehead">
 </main>
+<footer>
+    <p>Chris Peña UMSI 339 Portfolio Project</p>
+    <p>"Music drives you. It wakes you up, it gets you pumping. And, at the end of the day, the correct tune will chill you down." -Dimebag Darrell </p>
+</footer>
 </body>
 </html>
