--- a/portfolio/metallica.html
+++ b/portfolio/metallica.html
@@ -11,7 +11,7 @@
 
     <body>
     <header>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <div class = "skip"><a href="#skip">Skip to Main Content</a></div>
     <nav>
         <ul class="bands_nav">
           <li class="home"><a href="index.html">Homepage</a></li>
@@ -21,10 +21,10 @@
         </ul>
     </nav>
     </header>
-    
-    <main>
+
+    <main id="skip">
     <img src="images/metallica concert.jpg" alt="Wide view of Metallica concert with large background projection">
-    <p>Formed in 1981 by vocalist/guitarist James Hetfield and drummer Lars Ulrich, Metallica is a San Francisco based trash metal band. Arguably the best known metal band, Metallica has numerous accolades to their name including nine Grammy Awards, six straight number one debuts on the Billboard 200, and being named one of Rolling Stone magazine’s Greatest Artists of All Time. Very few bands can claim they have sold over 125 million albums with 10 studio albums.</p>
+    <p>Formed in 1981 by vocalist/guitarist James Hetfield and drummer Lars Ulrich, Metallica is a San Francisco based thrash metal band. Arguably the best known metal band, Metallica has numerous accolades to their name including nine Grammy Awards, six straight number one debuts on the Billboard 200, and being named one of Rolling Stone magazine’s Greatest Artists of All Time. Very few bands can claim they have sold over 125 million albums with 10 studio albums.</p>
 
     <p>The original guitarist was fired early on, and was replaced by current guitarist Kirk Hammet. After the unfortunate passing of bassist Cliff Burton, the band continued with Flotsam and Jetsam bassist Jason Newsted. Newsted eventually left the band, and was replaced by well-known metal bassist Robert Trujuillo. As of this writing, their touring is on pause while James Hetfield seeks rehabilitation.</p>
 
