--- a/portfolio/slayer.html
+++ b/portfolio/slayer.html
@@ -6,14 +6,37 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Slayer</title>
-  </head>
-    <body>
-    <main>
-    	<nav>
-		<ol>
-			<a href="index.html">Homepage</a>
-		</ol>
-	</nav>
+</head>
+
+<body>
+    <div class = "skip"><a href="#skip">Skip to Main Content</a></div>
+    <header>
+    <nav>
+        <ul class="bands_nav">
+          <li class="home"><a href="index.html">Homepage</a></li>
+          <li class="met"><a href="metallica.html">Metallica</a></li>
+          <li class="meg"><a href="megadeth.html">Megadeth</a></li>
+          <li class="pan"><a href="pantera.html">Pantera</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main id="skip">
+<img src="images/slayer concert.jpg" alt="Wide view Slayer concert with flames">
+<p>When people think metal music, Slayer is probably what comes to mind. Extremely heavy, angry, and unapologetic, Slayer is possibly the most celebrated of the Big 4. Most of their music focuses on the evils of humanity, and this has resulted in lawsuits, album bans, and criticism from religious organizations.</p>
+
+<p>Their influence on future metal bands is almost universal. They are also considered the link between thrash and the later-to-come death metal genres. Their music has earned four gold album certifications as well as a couple Grammy Awards. </p>
+
+<p>The untimely passing of guitarist Jeff Hanneman in 2013 left the band on hiatus. Eventually they recruited Exodus guitarist Gary Holt to fill the void, and their latest album was released in 2015. Slayer decided to cancel their 13th album, and officially hang-up their metal hats after their massive farewell tour that ended in 2019. </p>
+
+<p><br><br><br>Personal favorite album: God Hates Us All. </p>
+<img src="images/slayer cover.jpg" alt="Band Slayer facing camera, red border">
 </main>
+
+    <footer>
+      <p>Chris Peña UMSI 339 Portfolio Project</p>
+      <p>"Music drives you. It wakes you up, it gets you pumping. And, at the end of the day, the correct tune will chill you down." -Dimebag Darrell </p>
+    </footer>
+
 </body>
 </html>
