--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,18 +11,18 @@
     <title>The Kinda Big 4</title>
   </head>
     <body>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <div class="skip"><a href="#skip">Skip to Main Content</a></div>
     <header>
     <nav>
         <ul class="bands_nav">
-          <li class="met"><a href="metallica.html" alt="Metallica logo">Metallica</a></li>
-          <li class="mega"><a href="megadeth.html" alt="Megadeth logo">Megadeth</a></li>
-          <li class="slay"><a href="slayer.html" alt="Slayer logo">Slayer</a></li>
-          <li class="pan"><a href="pantera.html" alt="Pantera logo">Pantera</a></li>
+          <li class="met"><a href="metallica.html">Metallica</a></li>
+          <li class="mega"><a href="megadeth.html">Megadeth</a></li>
+          <li class="slay"><a href="slayer.html">Slayer</a></li>
+          <li class="pan"><a href="pantera.html">Pantera</a></li>
         </ul>
     </nav>
     </header>
-    <main>
+    <main id="skip">
 
     <h1> The Kinda Big 4 </h1>
     <p>Dubbed the “Big 4”, the founders of thrash metal are Metallica, Slayer, Megadeth, and Anthrax. This humble homage is dedicated to three of the four, and I’m replacing Anthrax with Pantera. Nothing against Anthrax, they’re a great band deserving much credit, but Pantera brought a new level to the genre.</p>
@@ -40,14 +40,14 @@
 		
 
 			<div class = "met">
-			<a href="metallica.html"><img border="0" alt="Metallica" src="images/metallica.jpg" width="100" height="100"></a></div>
+			<a href="metallica.html"><img border="0" alt="Metallica logo" src="images/metallica.jpg" width="100" height="100"></a></div>
 
-			<a href="megadeth.html"><img border="0" alt="Megadeth" src="images/megadeth.jpeg" width="100" height="100"></a>
+			<a href="megadeth.html"><img border="0" alt="Megadeth logo" src="images/megadeth.jpeg" width="100" height="100"></a>
 
-			<a href="slayer.html"><img border="0" alt="Slayer" src="images/slayer.jpg" width="100" height="100"></a>
+			<a href="slayer.html"><img border="0" alt="Slayer logo" src="images/slayer.jpg" width="100" height="100"></a>
 
 			<div class = "pan">
-			<a href="pantera.html"><img border="0" alt="Pantera" src="images/pantera.jpg" width="100" height="100"></a></div>
+			<a href="pantera.html"><img border="0" alt="Pantera logo" src="images/pantera.jpg" width="100" height="100"></a></div>
 <!-- 	</nav> -->
 </div>
 </main>
