--- a/portfolio/pantera.html
+++ b/portfolio/pantera.html
@@ -7,13 +7,37 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Pantera</title>
   </head>
-    <body>
-    <main>
-    	<nav>
-		<ol>
-			<a href="index.html">Homepage</a>
-		</ol>
-	</nav>
+<body>
+    <header>
+    <div class = "skip"><a href="#skip">Skip to Main Content</a></div>
+    <nav>
+        <ul class="bands_nav">
+          <li class="home"><a href="index.html">Homepage</a></li>
+          <li class="met"><a href="metallica.html">Metallica</a></li>
+          <li class="meg"><a href="megadeth.html">Megadeth</a></li>
+          <li class="slay"><a href="slayer.html">Slayer</a></li>
+        </ul>
+    </nav>
+    </header>
+<main id="skip">
+<img src="images/pantera concert.jpg" alt="Pantera concert with crowd in background">
+<p>Pantera. The band that started me down the path of heavy music. That fact may or may not have influenced the decision to boot Anthrax from this project. </p>
+
+<p>The band was formed by brothers Darrell "Dimebag" Abbott and Vinnie Paul Abbott, guitarist and drummer respectively. Thrash through and through, they are also considered pioneers of the groove metal subgenre. Their later albums are definitely heavier and more pure-metal, but they never lose that Texas groove. They’re quite unlike any other band. </p>
+
+<p>Pantera went into the metal history books when their album Far Beyond Driven was the first metal album to debut #1 on the Billboard 200, and was certified platinum. It also earned a Grammy nomination. Tension unfortunately started to grow within the band, and they disbanded several years. </p>
+
+<p>The Abbott brothers formed a new band, Damage Plan, and Dimebag Darrell was tragically murdered while on tour in 2004. Vinnie Paul decided to form another band, supergroup Hellyeah. Tragedy hit the Abbott family again in 2018 when Vinnie Paul passed away from heart failure in 2018. Hellyeah has since replaced Vinnie Paul, and have dedicated their music to him. </p>
+
+<p><br><br><br>Personal favorite album: The Great Southern Trendkill</p>
+<img src="images/pantera band.jpg" alt="Pantera band facing camera">
+<img src="images/dime.jpg" alt="Dimebag Darrell on Guitar World magazine cover">
+
+
 </main>
+    <footer>
+      <p>Chris Peña UMSI 339 Portfolio Project</p>
+      <p>"Music drives you. It wakes you up, it gets you pumping. And, at the end of the day, the correct tune will chill you down." -Dimebag Darrell </p>
+    </footer>
 </body>
 </html>
