--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,6 +19,7 @@
           <li class="mega"><a href="megadeth.html">Megadeth</a></li>
           <li class="slay"><a href="slayer.html">Slayer</a></li>
           <li class="pan"><a href="pantera.html">Pantera</a></li>
+          <li class="gallery"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     </header>
