--- a/portfolio/megadeth.html
+++ b/portfolio/megadeth.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nosifer&display=swap" rel="stylesheet">
     <title>Megadeth</title>
     <div class = "skip"><a href="#skip">Skip to Main Content</a></div>
 </head>
@@ -16,10 +17,12 @@
           <li class="met"><a href="metallica.html">Metallica</a></li>
           <li class="slay"><a href="slayer.html">Slayer</a></li>
           <li class="pan"><a href="pantera.html">Pantera</a></li>
+          <li class="gallery"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     </header>
 <main id="skip">
+<h1>Megadeth</h1>
 <img src="images/megadeth concert.jpg" alt="Megadeth with concert crowd in background">
 <p>As mentioned in the Metallica page, the original guitarist was fired. That guitaris was Dave Mustaine. Clearly upset by the events that unfolded, he went on to form his own band. As legend has it Mustaine said he wanted to, “form the heaviest metal band. Heavier than Metallica.”. </p>
 
