--- a/portfolio/metallica.html
+++ b/portfolio/metallica.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nosifer&display=swap" rel="stylesheet">
     <title>Metallica</title>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
   </head>
 
     <body>
@@ -18,11 +18,13 @@
           <li class="mega"><a href="megadeth.html">Megadeth</a></li>
           <li class="slay"><a href="slayer.html">Slayer</a></li>
           <li class="pan"><a href="pantera.html">Pantera</a></li>
+          <li class="gallery"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     </header>
 
     <main id="skip">
+    <h1>Metallica</h1>
     <img src="images/metallica concert.jpg" alt="Wide view of Metallica concert with large background projection">
     <p>Formed in 1981 by vocalist/guitarist James Hetfield and drummer Lars Ulrich, Metallica is a San Francisco based thrash metal band. Arguably the best known metal band, Metallica has numerous accolades to their name including nine Grammy Awards, six straight number one debuts on the Billboard 200, and being named one of Rolling Stone magazine’s Greatest Artists of All Time. Very few bands can claim they have sold over 125 million albums with 10 studio albums.</p>
 
