--- a/portfolio/pantera.html
+++ b/portfolio/pantera.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nosifer&display=swap" rel="stylesheet">
     <title>Pantera</title>
   </head>
 <body>
@@ -16,10 +17,12 @@
           <li class="met"><a href="metallica.html">Metallica</a></li>
           <li class="meg"><a href="megadeth.html">Megadeth</a></li>
           <li class="slay"><a href="slayer.html">Slayer</a></li>
+          <li class="gallery"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     </header>
 <main id="skip">
+<h1>Pantera</h1>
 <img src="images/pantera concert.jpg" alt="Pantera concert with crowd in background">
 <p>Pantera. The band that started me down the path of heavy music. That fact may or may not have influenced the decision to boot Anthrax from this project. </p>
 
@@ -32,7 +35,6 @@
 <p><br><br><br>Personal favorite album: The Great Southern Trendkill</p>
 <img src="images/pantera band.jpg" alt="Pantera band facing camera">
 <img src="images/dime.jpg" alt="Dimebag Darrell on Guitar World magazine cover">
-
 
 </main>
     <footer>
