--- a/portfolio/slayer.html
+++ b/portfolio/slayer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nosifer&display=swap" rel="stylesheet">
     <title>Slayer</title>
 </head>
 
@@ -17,11 +18,13 @@
           <li class="met"><a href="metallica.html">Metallica</a></li>
           <li class="meg"><a href="megadeth.html">Megadeth</a></li>
           <li class="pan"><a href="pantera.html">Pantera</a></li>
+          <li class="gallery"><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
 </header>
 
 <main id="skip">
+<h1>Slayer</h1>
 <img src="images/slayer concert.jpg" alt="Wide view Slayer concert with flames">
 <p>When people think metal music, Slayer is probably what comes to mind. Extremely heavy, angry, and unapologetic, Slayer is possibly the most celebrated of the Big 4. Most of their music focuses on the evils of humanity, and this has resulted in lawsuits, album bans, and criticism from religious organizations.</p>
 
