--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -25,7 +25,7 @@
 <h1>Personal Pictures</h1>
 <p>The images below are photos I took at various concerts</p><br>
 <div class="gallery_pics">
-<img src="images/gallery/anthraxConcert.jpg" alt="Anthrax concert">
+<img src="images/gallery/anthraxConcert.jpg" id="testimg" alt="Anthrax concert">
 <img src="images/gallery/anthraxFront.jpg" alt="Front view of Anthrax concert">
 <img src="images/gallery/hetfield.jpg" alt="James Hetfield during concert">
 <img src="images/gallery/metallicaConcert.jpg" alt="Metallica after performing concert">
