--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160831433-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160831433-1');
+</script>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -25,7 +34,7 @@
     </header>
     <main id="skip">
 
-    <h1> The Kinda Big 4 </h1>
+    <h1 id="homeh1"> The Kinda Big 4 </h1><br><br><br>
     <p>Dubbed the “Big 4”, the founders of thrash metal are Metallica, Slayer, Megadeth, and Anthrax. This humble homage is dedicated to three of the four, and I’m replacing Anthrax with Pantera. Nothing against Anthrax, they’re a great band deserving much credit, but Pantera brought a new level to the genre.</p>
 
 	<p>The sounds of thrash metal typically involve down-tuned guitars with complex guitar riffs. Guitar solos are very common, and often use higher-register notes. They are high speed and technical, and use advanced techniques including sweep picking, alternate picking, string skipping, and two-hand tapping. Double bass drums are frequently heard. Vocals can range from melodic, clean singing to shouted or even growled singing. </p>
