--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160831433-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160831433-6');
+</script>
+
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -31,9 +41,9 @@
 <img src="images/gallery/metallicaConcert.jpg" alt="Metallica after performing concert">
 <img src="images/gallery/slayerConcert.jpg" alt="Slayer in concert">
 <img src="images/gallery/kerryking.jpg" alt="Kerry King of Slayer playing guitar during concert">
-<img src="images/gallery/kingSolo.jpg" alt="Kerry King of Slayer performing a guitar solo">
+<img src="images/gallery/kingSolo.jpg" id="kingsolo" alt="Kerry King of Slayer performing a guitar solo">
 <img src="images/gallery/garyholt.jpg" alt="Gary Holt of Slayer playing guitar during concert">
-<img src="images/gallery/kingAndholt.jpg" alt="King and Holt playing guitar during concert">
+<img src="images/gallery/kingAndholt.jpg" id="kingholt" alt="King and Holt playing guitar during concert">
 <img src="images/gallery/hanneman.jpg" alt="Jeff Hanneman banner backdrop during a Slayer concert">
 <img src="images/gallery/graves.jpg" alt="Grave site of Abbot brothers Darrell and Vinnie Paul">
 </div>
