--- a/portfolio/pantera.html
+++ b/portfolio/pantera.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160831433-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160831433-5');
+</script>
+
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -23,14 +33,14 @@
     </header>
 <main id="skip">
 <h1>Pantera</h1>
-<img src="images/pantera concert.jpg" alt="Pantera concert with crowd in background">
+<img src="images/pantera concert.jpg" id="animate" alt="Pantera concert with crowd in background">
 <p>Pantera. The band that started me down the path of heavy music. That fact may or may not have influenced the decision to boot Anthrax from this project. </p>
 
 <p>The band was formed by brothers Darrell "Dimebag" Abbott and Vinnie Paul Abbott, guitarist and drummer respectively. Thrash through and through, they are also considered pioneers of the groove metal subgenre. Their later albums are definitely heavier and more pure-metal, but they never lose that Texas groove. They’re quite unlike any other band. </p>
 
 <p>Pantera went into the metal history books when their album Far Beyond Driven was the first metal album to debut #1 on the Billboard 200, and was certified platinum. It also earned a Grammy nomination. Tension unfortunately started to grow within the band, and they disbanded several years. </p>
 
-<p>The Abbott brothers formed a new band, Damage Plan, and Dimebag Darrell was tragically murdered while on tour in 2004. Vinnie Paul decided to form another band, supergroup Hellyeah. Tragedy hit the Abbott family again in 2018 when Vinnie Paul passed away from heart failure in 2018. Hellyeah has since replaced Vinnie Paul, and have dedicated their music to him. </p>
+<p>The Abbott brothers formed a new band, Damage Plan, and Dimebag Darrell was tragically murdered while on tour in 2004. Vinnie Paul decided to form another band, supergroup Hellyeah. Tragedy hit the Abbott family again in 2018 when Vinnie Paul passed away from heart failure. Hellyeah has since replaced Vinnie Paul, and have dedicated their music to him. </p>
 
 <p><br><br><br>Personal favorite album: The Great Southern Trendkill</p>
 <img src="images/pantera band.jpg" alt="Pantera band facing camera">
